--- a/css/style.violet.css
+++ b/css/style.violet.css
@@ -1,14 +1,18 @@
 /*
 =========================================
 =========================================
+
 Startup Template By Bootstrapious.com
+
 =========================================
 ========================================= */
 /* variant 1 - violet */
 /*
+
 =====================
 GENERAL
 =====================
+
 */
 html,
 body {
@@ -312,21 +316,26 @@ fieldset[disabled] .btn-white.active {
   color: #011638;
 }
 /*
+
 =====================
 SIDEBAR + RIGHT COLUMN
 =====================
+
 */
 #sidebar {
   padding-top: 40px;
 }
+/*modified sidebar to follow scroll */
 .sidebar-content {
+    position: fixed;
+    width: inherit;
     z-index: 0;
-    padding: 0 1.7em 0 0em;
+    padding: 0 1em 0 0.2em;
 }
 @media screen and (min-width: 992px) {
   .sidebar-content {
-    padding-left: 0px;
-    padding-right: 18px;
+    padding-left: 20px;
+    padding-right: 20px;
   }
 }
 .sidebar-heading {
@@ -450,9 +459,11 @@ SIDEBAR + RIGHT COLUMN
   text-decoration: none;
 }
 /*
+
 =====================
 OFF-CANVAS SIDEBAR BEHAVIOUR
 =====================
+
 */
 @media screen and (max-width: 767px) {
   .row-offcanvas {
@@ -492,9 +503,11 @@ OFF-CANVAS SIDEBAR BEHAVIOUR
   }
 }
 /*
+
 =====================
 SERVICES / INTEGRATIONS
 =====================
+
 */
 .services {
   margin-top: 80px;
@@ -529,9 +542,11 @@ SERVICES / INTEGRATIONS
   color: #999999;
 }
 /*
+
 =====================
 CUSTOMERS
 =====================
+
 */
 .customer {
   text-align: center;
@@ -548,9 +563,11 @@ CUSTOMERS
   filter: grayscale(0);
 }
 /*
+
 =====================
 SIGN UP FORM
 =====================
+
 */
 @media (max-width: 991px) {
   .sign-up-form .form-control {
@@ -566,9 +583,11 @@ SIGN UP FORM
   }
 }
 /*
+
 =====================
 SOCIAL LINKS
 =====================
+
 */
 .contact-form {
   margin-bottom: 20px;
@@ -647,9 +666,11 @@ p.social.social--big i {
   line-height: 60px;
 }
 /*
+
 =====================
 COPYRIGHT
 =====================
+
 */
 .copyright {
   color: #999999;
@@ -672,9 +693,11 @@ COPYRIGHT
   }
 }
 /*
+
 =====================
 MAIN PORTFOLIO SLIDER
 =====================
+
 */
 #main-slider {
   margin-bottom: 40px;
@@ -694,9 +717,11 @@ MAIN PORTFOLIO SLIDER
   background: #9055a2;
 }
 /*
+
 =====================
 ABOUT
 =====================
+
 */
 .progress-title {
   text-align: left;
@@ -767,9 +792,11 @@ ABOUT
   background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
 }
 /*
+
 =====================
 EKKO LIGHTBOX
 =====================
+
 */
 .ekko-lightbox-container {
   position: relative;
@@ -1193,9 +1220,11 @@ a:active {
   transform: translate(0, 100%);
 }
 /*
+
 =====================
 STYLE SWITCHER FOR DEMO
 =====================
+
 */
 #style-switch-button {
   position: fixed;
